test/localeModels/nspark/loc-in-locales.chpl
use IO;

forall loc in Locales do
  on loc do
    var c: channel;
